Added Distance Analyzer to app

--- a/struts/src/main/webapp/distance.html
+++ b/struts/src/main/webapp/distance.html
@@ -1,5 +1,3 @@
-<%@ taglib prefix="s" uri="/struts-tags" %>
-<%@ page contentType="text/html; charset=UTF-8" %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,9 +7,11 @@
 </head>
 <body>
 <main>
-    <em>Struts Hello World Results Page</em>
-    <br />
-    <p>Hello <s:property value="firstName"/> !</p>
+    <form action="distance.action">
+        <p>What distance in meters would you like to analyze?</p>
+        <input type="number" name="meters"/>
+        <input type="submit" value="Submit"/>
+    </form>
 </main>
 </body>
 </html>
